--- a/css/style.css
+++ b/css/style.css
@@ -116,12 +116,12 @@ background-color: var(--basic-black);
  background-color: var(--basic-green);
 }
 
-.header-order:active {
- background-color: var(--basic-green);
-}
-
 .header-order:hover {
 background-color: var(--green-hover);
+}
+
+.header-search span {
+  opacity: 0.3;
 }
 
 .header-marker:active,
@@ -166,7 +166,8 @@ background-color: var(--midnight-hover);
   color: var(--basic-gulf-blue);
 }
 
-.user-navigation a {
+.user-navigation a,
+.user-name p {
   font-size: 21px;
   line-height: 21px;
   text-align: center;
@@ -180,6 +181,17 @@ background-color: var(--midnight-hover);
 
 .user-navigation a:active {
   color: var(--basic-gray);
+}
+
+.user-name {
+  width: 299px;
+}
+
+a.user-order,
+a.user-cabinet {
+  font-size: 16px;
+  line-height: 18px;
+  background-color: var(--basic-fon);
 }
 
 .main-navigation {
