--- a/css/style.css
+++ b/css/style.css
@@ -60,6 +60,8 @@
   --border-buy: #367315;
   --dark-green-hover: #518534;
   --dorder-catalog: #eaeaea;
+  --gray-button: #A9A9A9;
+  --popular-product: #F9F5F0;
 }
 
 /* Глобальные стили*/
@@ -85,9 +87,25 @@ a {
   text-decoration: none;
 }
 
+li {
+  list-style: none;
+}
+
 fieldset {
   border: none;
 }
+
+.visually-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+  clip: rect(0 0 0 0);
+  overflow: hidden;
+}
+
 /* Стили шапки*/
 
 .box-header {
@@ -235,7 +253,8 @@ a.user-cabinet {
 /* Стили кнопок*/
 
 .link-button,
-.link-button a {
+.link-button a
+ {
   font-size: 14px;
   line-height: 18px;
   text-transform: uppercase;
@@ -293,8 +312,132 @@ button.button-marker:hover {
 button.button-marker:active {
   opacity: 0.5;
 }
+
+.button-filter a {
+  font-family: "PT Sans", "Arial", sans-serif;
+  font-size: 13px;
+  line-height: 18px;
+  border: 1px solid var(--border-button);
+  border-radius: 2px;
+  color: var(--basic-black);
+}
+
+.button-filter a:hover {
+  border: 1px solid var(--basic-gray);
+}
+
+.button-filter a:active {
+  border: 1px solid var(--basic-red);
+}
+
 /* Стили основного содержимого */
 
+/* Стили основного содержимого/навигация по каталогу*/
+
+.catalog-menu-list {
+  list-style: none;
+}
+
+.catalog-menu-item h3 {
+  font-size: 24px;
+  line-height: 30px;
+  font-weight: bold;
+  color: var(--basic-white);
+}
+
+.catalog-menu-item a:not(.link-button) {
+  font-size: 14px;
+  line-height: 18px;
+  text-transform: uppercase;
+  color: var(--basic-white);
+  background-color: rgba(255, 255, 255, 0.3);
+}
+
+.catalog-menu-item a:hover:not(.link-button){
+  color: var(--basic-white);
+  background-color: rgba(197, 197, 197, 0.3);
+}
+
+.catalog-menu-title h3 {
+  font-size: 36px;
+  line-height: 36px;
+  font-weight: bold;
+  text-transform: uppercase;
+  color: black;
+}
+
+.catalog-menu-title p {
+  font-size: 18px;
+  line-height: 24px;
+}
+
+.materials,
+.delivery {
+  background-color: var(--basic-yellow);
+}
+
+.tool {
+  background-color: var(--basic-blue);
+}
+
+.machinery {
+  background-color: var(--basic-light-purple);
+}
+.discount {
+  background-color: var(--basic-light-green);
+}
+
+/* Стили основного содержимого/ Популярный товар*/
+
+.popular-product-title,
+.popular-manufacturer-title {
+  background-color: var(--popular-product);
+}
+
+.popular-product-title h3,
+.popular-manufacturer-title h3 {
+  font-size: 30px;
+  line-height: 30px;
+  font-weight: normal;
+  text-transform: uppercase;
+  color: var(--basic-gulf-blue);
+}
+
+/* Стили основного содержимого/ Популярные производители*/
+
+.manufacturer-list a:hover {
+  box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.15);
+}
+
+.manufacturer-list a:active {
+  opacity: 0.5;
+  box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.15);
+}
+
+/* Стили основного содержимого/ Сервисы*/
+
+.serviсes {
+  background-color: var(--basic-fon);
+}
+
+.serviсes h3 {
+  font-size: 30px;
+  line-height: 30px;
+  text-transform: uppercase;
+}
+
+.serviсes h4 {
+  font-size: 36px;
+  line-height: 24px;
+  text-transform: uppercase;
+  color: var(--basic-gulf-blue);
+}
+
+.serviсes p {
+  font-family: "PT Sans", "Arial", sans-serif;
+  font-size: 13px;
+  line-height: 24px;
+}
 /* Секция о компании и контакты*/
 .company-title h3 {
   font-size: 30px;
@@ -325,6 +468,34 @@ button.button-marker:active {
   line-height: 24px;
   font-family: "PT Sans", "Arial", sans-serif;
 }
+
+.services-menu li {
+  width: 240px;
+  height: 61px;
+  background-color: var(--basic-gulf-blue);
+  box-shadow: 0px 1px 0px var(--basic-dark-blue), inset 0px 1px 0px #405069;
+}
+
+.services-menu li:hover {
+  background-color: var(--basic-dark-blue);
+}
+
+.services-menu li:active {
+  background-color: var(--basic-white);
+  box-shadow: 0px 1px 0px var(--basic-white), inset 0px 1px 0px var(--basic-white);
+}
+
+.services-menu a {
+  font-size: 21px;
+  line-height: 30px;
+  font-weight: bold;
+  color: var(--basic-white);
+}
+
+.services-menu a:active{
+  color: var(--basic-gulf-blue)
+}
+
 /* Стили каталога*/
 
 .catalog {
@@ -365,6 +536,7 @@ button.button-marker:active {
 .catalog-filter h3 {
   font-size: 13px;
   line-height: 18px;
+  font-weight: normal;
   background-color: var(--basic-light-grayish);
 }
 
@@ -382,6 +554,34 @@ button.button-marker:active {
   font-size: 15px;
   line-height: 19px;
 }
+
+/* Стили каталога/Сортировка*/
+
+.catalog-sorting {
+  font-size: 13px;
+  line-height: 18px;
+  text-transform: uppercase;
+  background-color: var(--basic-light-grayish);
+}
+
+.catalog-sorting h3 {
+  font-size: 13px;
+  line-height: 17px;
+  font-weight: normal;
+}
+
+.catalog-sorting a {
+  color: rgba(0, 0, 0, 0.3);
+}
+
+.catalog-sorting a:hover {
+  color: var(--basic-black)
+}
+
+.catalog-sorting a:active {
+  color: var(--basic-red);
+}
+
 /* Стили каталога/Карточка товара*/
 
 .product-item {
@@ -390,6 +590,7 @@ button.button-marker:active {
 }
 
 li.product-item {
+  font-family: "PT Sans","Arial", sans-serif;
   list-style: none;
   border: 1px solid var(--dorder-catalog);
 }
@@ -400,11 +601,33 @@ li.product-item {
   font-weight: bold;
 }
 
-.product-item p {
+.old-price {
+  font-family: "Cuprum", "Arial", sans-serif;
   font-size: 17px;
   line-height: 18px;
   font-weight: bold;
+  color: var(--gray-button);
   text-decoration-line: line-through;
+}
+
+.new-price {
+  font-family: "Cuprum", "Arial", sans-serif;
+  width: 141px;
+  height: 38px;
+  font-size: 17px;
+  line-height: 18px;
+  font-weight: bold;
+  text-align: center;
+  color: var(--basic-white);
+  background-color: var(--basic-red);
+}
+
+/* Стили каталога/Текст*/
+
+.catalog-text p {
+  font-family: "PT Sans","Arial", sans-serif;
+  font-size: 13px;
+  line-height: 24px;
 }
 
 /* Стили подвала*/
