--- a/css/style.css
+++ b/css/style.css
@@ -146,7 +146,7 @@ input[type="search"]:focus {
 
 .header-order {
   width: 150px;
-  height: 42px;
+  height: auto;
   background-color: var(--basic-green);
 }
 
@@ -184,7 +184,7 @@ input[type="search"]:focus {
 
 .main-header-contact p:first-child {
   width: 270px;
-  height: 45px;
+  height: auto;
   font-size: 21px;
   line-height: 30px;
   font-weight: bold;
@@ -429,6 +429,7 @@ button.button-marker:active {
 .serviсes h4 {
   font-size: 36px;
   line-height: 24px;
+  font-weight: normal;
   text-transform: uppercase;
   color: var(--basic-gulf-blue);
 }
@@ -471,7 +472,7 @@ button.button-marker:active {
 
 .services-menu li {
   width: 240px;
-  height: 61px;
+  height: auto;
   background-color: var(--basic-gulf-blue);
   box-shadow: 0px 1px 0px var(--basic-dark-blue), inset 0px 1px 0px #405069;
 }
@@ -571,6 +572,8 @@ button.button-marker:active {
 }
 
 .catalog-sorting a {
+  font-size: 13px;
+  line-height: 18px;
   color: rgba(0, 0, 0, 0.3);
 }
 
@@ -585,8 +588,8 @@ button.button-marker:active {
 /* Стили каталога/Карточка товара*/
 
 .product-item {
-  width: 220px;
-  height: 318px;
+  width: auto
+  height: auto;
 }
 
 li.product-item {
