--- a/css/style.css
+++ b/css/style.css
@@ -75,6 +75,7 @@ body {
   grid-template-rows: min-content 1fr min-content;
   align-content: start;
   min-width: 960px;
+  min-height: 100%;
   margin: 0;
   padding: 0;
   font-family: "Cuprum", "Arial", sans-serif;
@@ -108,6 +109,7 @@ a {
 .container {
   width: 940px;
   margin: 0 auto;
+  padding: 0 10px;
 }
 
 *, *::before, *::after {
@@ -299,14 +301,17 @@ a.user-cabinet {
   background-color: var(--basic-dark-red);
 }
 
-button.button-filter {
+.button-filter {
+  padding: 10px 80px;
   font-size: 13px;
   line-height: 18px;
   border: 1px solid var(--border-button);
   background-color: var(--basic-white);
+  text-transform: uppercase;
 }
 
-button.button-buy {
+.button-buy {
+  padding: 10px 40px 10px 53px;
   font-family: "Cuprum", "Arial", sans-serif;
   font-size: 14px;
   line-height: 18px;
@@ -318,15 +323,16 @@ button.button-buy {
   box-shadow: inset 0px -3px 0px var(--border-buy);
 }
 
-button.button-buy:hover {
+.button-buy:hover {
   background-color: var(--green-hover);
 }
 
-button.button-buy:active {
+.button-buy:active {
   background-color: var(--dark-green-hover);
 }
 
-button.button-marker {
+.button-marker {
+  padding: 10px 33px;
   font-family: "Cuprum", "Arial", sans-serif;
   font-size: 14px;
   line-height: 18px;
@@ -337,29 +343,36 @@ button.button-marker {
   background-color: var(--basic-white);
 }
 
-button.button-marker:hover {
+.button-marker:hover {
   border-color: var(--basic-gulf-blue);
 }
 
-button.button-marker:active {
+.button-marker:active {
   opacity: 0.5;
 }
 
-.button-filter a {
-  font-family: "PT Sans", "Arial", sans-serif;
+.button-navigation {
+  display: block;
+  padding: 10px 15px;
   font-size: 13px;
   line-height: 18px;
+  color: var(--basic-black);
   border: 1px solid var(--border-button);
   border-radius: 2px;
-  color: var(--basic-black);
+  text-transform: uppercase;
 }
 
-.button-filter a:hover {
+.button-navigation:hover {
   border: 1px solid var(--basic-gray);
 }
 
-.button-filter a:active {
+.button-navigation:active {
+  color: var(--basic-black);
   border: 1px solid var(--basic-red);
+}
+
+ .next {
+   padding: 10px 31px;
 }
 
 .hummer-drill-button,
@@ -580,7 +593,7 @@ button.button-marker:active {
 
 .catalog {
   display: grid;
-  grid-template-columns: 220px 1fr;
+  grid-template-columns: 220px 1fr; 
   align-content: start;
   font-family: "PT Sans", "Arial", sans-serif;
 }
@@ -634,11 +647,11 @@ button.button-marker:active {
 
 .catalog-filter {
   text-transform: uppercase;
-  outline: 5px solid yellowgreen;
-  outline-offset: -5px;
 }
 
 .catalog-filter h3 {
+  margin: 0;
+  padding: 10px 0px 10px 18px;
   font-size: 13px;
   line-height: 18px;
   font-weight: normal;
@@ -647,6 +660,10 @@ button.button-marker:active {
 
 .catalog-filter li {
   list-style: none;
+}
+
+.catalog-filter fieldset {
+  border: none;
 }
 
 .catalog-filter legend {
@@ -664,8 +681,7 @@ button.button-marker:active {
 
 .catalog-sorting {
   display: flex;
-  width: 700px;
-  height: 38px;
+  width: auto;
   margin-left: 20px;
   margin-bottom: 28px;
   font-size: 13px;
@@ -675,6 +691,8 @@ button.button-marker:active {
 }
 
 .catalog-sorting h3 {
+  margin: 0;
+  padding: 10px 0 10px 20px;
   font-size: 13px;
   line-height: 17px;
   font-weight: normal;
@@ -696,7 +714,10 @@ button.button-marker:active {
 
 .sorting-list {
   display: flex;
-  justify-content: space-between;
+  align-items: center;
+  margin: 0;
+  padding: 0;
+  padding-left: 140px;
   list-style: none;
 }
 
@@ -710,28 +731,36 @@ button.button-marker:active {
 .product-list {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
+  gap: 20px;
+  margin: 0;
   width: 700px;
+  padding: 0;
 }
 
 /* Стили каталога/Карточка товара*/
 
 .product-item {
-  width: auto;
-}
-
-li.product-item {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  width: 220px;
+  height: 318px;
   font-family: "PT Sans","Arial", sans-serif;
   list-style: none;
   border: 1px solid var(--dorder-catalog);
 }
 
 .product-item h4 {
+  margin: 0;
   font-size: 18px;
   line-height: 20px;
   font-weight: bold;
+  text-align: center;
 }
 
 .old-price {
+  margin: 0;
   font-family: "Cuprum", "Arial", sans-serif;
   font-size: 17px;
   line-height: 18px;
@@ -741,15 +770,20 @@ li.product-item {
 }
 
 .new-price {
+  margin: 0;
+  padding: 10px 44px 10px 32px;
   font-family: "Cuprum", "Arial", sans-serif;
-  width: 141px;
-  height: 38px;
   font-size: 17px;
   line-height: 18px;
   font-weight: bold;
   text-align: center;
   color: var(--basic-white);
   background-color: var(--basic-red);
+  border-radius: 2px;
+}
+
+.item-button {
+
 }
 
 /* Cтили каталога/ Навигаия по списку товаров*/
