--- a/css/style.css
+++ b/css/style.css
@@ -59,7 +59,7 @@
   --border-button: #e5e5e5;
   --border-buy: #367315;
   --dark-green-hover: #518534;
-  --dorder-catalog: #eaeaea;
+  --border-catalog: #eaeaea;
   --gray-button: #A9A9A9;
   --popular-product: #F9F5F0;
 }
@@ -388,6 +388,11 @@ a.user-cabinet {
 
 /* Стили основного содержимого/навигация по каталогу*/
 
+.features-catalog {
+  margin-top: 60px;
+  margin-bottom: 60px;
+}
+
 .catalog-menu-list {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
@@ -400,10 +405,13 @@ a.user-cabinet {
 
 .catalog-menu-item {
   position: relative;
+  height: 123px;
 }
 
 .catalog-menu-item h3 {
   margin: 0;
+  margin-top: 20px;
+  margin-left: 22px;
   padding: 0;
   font-size: 24px;
   line-height: 30px;
@@ -411,15 +419,37 @@ a.user-cabinet {
   color: var(--basic-white);
 }
 
-.catalog-menu-item a:not(:nth-child(4)),
-.catalog-menu-item a:not(:nth-child(5)) {
+.catalog-menu-item img {
   position: absolute;
-  bottom: 22px;
-  left: 22px;
-  padding: 10px 23px;
+}
+
+.materials img {
+ top: 31px;
+ right: 43px;
+}
+
+.tool img {
+  top: 34px;
+  right: 31px;
+}
+
+.machinery img {
+  top: 31px;
+  right: 31px;
+}
+
+.discount img {
+  top: 26px;
+  right: 45px;
+}
+
+.delivery img {
+  top: 32px;
+  right: 31px;
 }
 
 .catalog-menu-item a:not(.link-button) {
+  margin: 14px 0 22px 22px;
   font-size: 14px;
   line-height: 18px;
   text-transform: uppercase;
@@ -469,6 +499,7 @@ a.user-cabinet {
   grid-column: 1 /3;
   grid-row: 2 / 4;
   position: relative;
+  height: 266px;
   background-image: url("../img/man-and-hummer-drill.jpg");
   background-repeat: no-repeat;
 }
@@ -476,8 +507,6 @@ a.user-cabinet {
 .screwd-river {
   display: none;
   position: relative;
-  width: 620px;
-  height: 266px;
   background-image: url("../img/man-and-screwdriver.jpg");
   background-repeat: no-repeat;
 }
@@ -506,7 +535,25 @@ a.user-cabinet {
   color: var(--basic-white);
 }
 
+.button-item-menu {
+  display: block;
+  width: 135px;
+  padding: 10px 0;
+  text-align: center;
+}
+
 /* Стили основного содержимого/ Популярный товар*/
+
+.popular-product {
+  margin-bottom: 70px;
+}
+
+.popular-product-title {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 20px;
+}
 
 .popular-product-title,
 .popular-manufacturer-title {
@@ -522,13 +569,70 @@ a.user-cabinet {
   color: var(--basic-gulf-blue);
 }
 
+.popular-product-title h3 {
+  margin: 30px 0px 30px 30px;
+}
+
+.popular-button-product {
+  margin-right: 14px;
+  padding: 10px 24px;
+}
+
+.popular-list {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  gap: 20px;
+  margin: 0;
+  padding: 0;
+}
+
 /* Стили основного содержимого/ Популярные производители*/
 
-.manufacturer-list a:hover {
+.popular-manufacturer {
+  margin-bottom: 70px;
+}
+
+.popular-manufacturer-title {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 20px;
+}
+
+.popular-manufacturer-title h3 {
+  margin: 30px 0px 30px 30px;
+}
+
+.popular-button-manufacturer {
+  margin-right: 19px;
+  padding: 10px 40px;
+}
+
+.manufacturer-list {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  gap: 20px;
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
+
+.manufacturer-list li {
+  width: 220px;
+  height: 145px;
+  border: 1px solid var(--border-catalog);
+}
+
+.manufacturer-list a {
+  display: block;
+  text-align: center;
+}
+
+.manufacturer-list li:hover {
   box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.15);
 }
 
-.manufacturer-list a:active {
+.manufacturer-list li:active {
   opacity: 0.5;
   box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.15);
 }
@@ -545,7 +649,74 @@ a.user-cabinet {
   text-transform: uppercase;
 }
 
-.serviсes h4 {
+.services-box-wrapper {
+  display: grid;
+  grid-template-columns: 240px 1fr;
+  align-content: start;
+}
+
+.services-title {
+  grid-column: 1 / -1;
+}
+
+.services-delivery {
+  position: relative;
+}
+
+.services-guarantee {
+  display: none;
+}
+
+.services-credit {
+  display: none;
+}
+
+.services-menu {
+  grid-column: 1;
+}
+
+.services-menu ul {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
+
+.services-menu li {
+  width: 240px;
+  height: auto;
+  background-color: var(--basic-gulf-blue);
+  box-shadow: 0px 1px 0px var(--basic-dark-blue), inset 0px 1px 0px #405069;
+}
+
+.services-menu li:hover {
+  background-color: var(--basic-dark-blue);
+}
+
+.services-menu li:active {
+  background-color: var(--basic-white);
+  box-shadow: 0px 1px 0px var(--basic-white), inset 0px 1px 0px var(--basic-white);
+}
+
+.services-menu a {
+  font-size: 21px;
+  line-height: 30px;
+  font-weight: bold;
+  color: var(--basic-white);
+}
+
+.services-menu a:active{
+  color: var(--basic-gulf-blue)
+}
+
+.services-menu-list {
+  grid-column: 2;
+  height: 283px;
+  margin-top: 67px;
+  margin-left: 80px;
+}
+
+.services-menu-list h4 {
+  margin: 0;
   font-size: 36px;
   line-height: 24px;
   font-weight: normal;
@@ -553,11 +724,20 @@ a.user-cabinet {
   color: var(--basic-gulf-blue);
 }
 
-.serviсes p {
+.services-menu-list p {
+  margin: 0;
+  margin-top: 30px;
   font-family: "PT Sans", "Arial", sans-serif;
   font-size: 13px;
   line-height: 24px;
 }
+
+.services-menu-list img {
+  position: absolute;
+  top: 22px;
+  left: 151px;
+}
+
 /* Секция о компании и контакты*/
 .company-contact {
   display: flex;
@@ -597,33 +777,6 @@ a.user-cabinet {
   font-size: 13px;
   line-height: 24px;
   font-family: "PT Sans", "Arial", sans-serif;
-}
-
-.services-menu li {
-  width: 240px;
-  height: auto;
-  background-color: var(--basic-gulf-blue);
-  box-shadow: 0px 1px 0px var(--basic-dark-blue), inset 0px 1px 0px #405069;
-}
-
-.services-menu li:hover {
-  background-color: var(--basic-dark-blue);
-}
-
-.services-menu li:active {
-  background-color: var(--basic-white);
-  box-shadow: 0px 1px 0px var(--basic-white), inset 0px 1px 0px var(--basic-white);
-}
-
-.services-menu a {
-  font-size: 21px;
-  line-height: 30px;
-  font-weight: bold;
-  color: var(--basic-white);
-}
-
-.services-menu a:active{
-  color: var(--basic-gulf-blue)
 }
 
 /* Стили каталога*/
@@ -782,10 +935,10 @@ a.user-cabinet {
   justify-content: space-between;
   align-items: center;
   width: 220px;
-  height: 318px;
+  height: auto;
   font-family: "PT Sans","Arial", sans-serif;
   list-style: none;
-  border: 1px solid var(--dorder-catalog);
+  border: 1px solid var(--border-catalog);
 }
 
 .product-item h4 {
